Rename style.css to tstyle.css to avoid html confusing it with a likewise named file in a different directory

--- a/static/tstyle.css
+++ b/static/tstyle.css
@@ -3,10 +3,10 @@ body {
   padding: 0;
   font-family: "Arial", Arial, sans-serif;
   color: #000;
-  background-color: blue;
+  background-color: white;
 }
 
 li{
-  background-color: purple;
+  background-color: white;
   font-size:36px;
 }
