--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,16 @@
 <html>
     <head> 
         <title>Project 1 Foodtweet</title> 
-        <link rel="stylesheet" href="{{ url_for('static', filename='./tstyle.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='/tstyle.css') }}">
     </head> 
+    
     <body>
         <h1>What's being said about {{ food }}</h1>
-        <pre><img src = "{{ tweet[0] }}" width="30" height="30">  <b>{{ tweet[1] }}</b>    {{ tweet[2] }}</pre>
-        <p>{{ tweet[3] }}</p>
-        
+        <div class = "tweet">
+            <pre><img src = "{{ tweet[0] }}" width="100" height="100">  <b>{{ tweet[1] }}</b>    {{ tweet[2] }}</pre>
+            <div class = "text">
+                <p>{{ tweet[3] }}</p>
+            </div>
+        </div>
     </body>
 </html>
