--- a/static/tstyle.css
+++ b/static/tstyle.css
@@ -1,30 +1,75 @@
-body {
+html, body {
+  width: 100%; 
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Arial", Arial, sans-serif;
-  color: #1487e0;
+  color: #424242;
   background-color:  #d3d2d9;
-  font-size: 28px;
+  font-size: 16px;
+  background-image: linear-gradient(to bottom right, purple, green)
+}
+
+
+div {
+  position: absolute; 
+  border-radius: 25px;
+}
+
+#title {
+  top: 5%;
+  left: 20%;
+  right: 20%;
+  bottom: 80%;
+  text-align: center;
+}
+
+#image {
+  background: #f09; 
+  top: 10%; 
+  left: -10%; 
+  right: 50%; 
+  bottom: 35%;
+}
+
+#source{
+  left: 50%;
+  top: 10%;
+}
+
+#recipe {
+  background: #f90; 
+  top: 10%; 
+  left: 50%; 
+  right: -10%; 
+  bottom: 35%;
+  text-indent: 5%
+}
+
+#tweet {
+  top: 70%;
+  left: 10%;
+  right: 10%;
+  bottom: 30%;
+  text-align: center;
+  font-size: 16px;
+  margin: auto;
+  color: navy;
+}
+
+#body {
+  background: #FFF;
+  position: fixed;
+  top: 10%;
+  left: 20%;
+  right: 20%;
+  bottom: 10%;
 }
 
 li {
-  background-color: white;
-  font-size:52px;
+  font-size:22px;
 }
 
 h1 {
   text-align: center;
-}
-
-.tweet {
-  position: relative;
-  left: 50px;
-  top: 50px;
-  width: 750px;
-  height: 400px;
-  font-size: 36px;
-}
-
-p {
-  color: navy;
 }
