--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,8 @@
             
     
             <div id="tweet" class = "tweet">
-                <h1>What's being said about {{ food }}</h1>
-                <pre><img src = "{{ tweet[0] }}" width="75" height="75">  <b>{{ tweet[1] }}</b>    {{ tweet[2] }}</pre>
+                <h1>What's being said about {{ dish_title }}</h1>
+                <pre><img id="tweet_image" src = "{{ tweet[0] }}">  <b>{{ tweet[1] }}</b>    {{ tweet[2] }}</pre>
                     <p>{{ tweet[3] }}</p>
             </div>
             
